data/derived/fa15/progs/unify/prog1646.ml.out
Characters 50-51:
  |h::t -> x::h in append x t;;
           ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
